--- a/src/components/Myswiper.module.css
+++ b/src/components/Myswiper.module.css
@@ -1,18 +1,63 @@
-.main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  height: 600px;
+  width: 1700px;
+}
+swiper-container {
+  /* background-color: brown; */
+  width: 1500px;
+  height: 232px;
+  line-height: 200px;
+  text-align: center;
+}
+swiper-slide {
+  background-color: rgb(4 47 46);
+  color: #fff;
+  font-size: 25px;
+}
+
+swiper-slide:nth-child(2) {
+  background-color: rgb(15 118 110);
+}
+
+swiper-slide:nth-child(3) {
+  background-color: rgb(45 212 191);
+}
+
+swiper-slide:nth-child(4) {
+  background-color: rgb(153 246 228);
+}
+
+swiper-slide:nth-child(5) {
+  background-color: rgb(34 197 94);
+}
+.carouselContainer {
+  position: relative;
+  flex-direction: column;
+}
+.navBtn{
+    display: block;
+    position: absolute;
+    z-index:20;
+    user-select:none;
+    -webkit-user-select:none;
     background-color: rgba(0,0,0,0.3);
-    height: 600px;
-    width: 1700px;
-}
-.swiperContainer {
-    background-color: brown;
-    width: 1500px;
-    height: 232px;
-    line-height: 200px;
-    text-align: center;
+    cursor: pointer;
+    padding: 2px;
+    border-radius: 5px;
+    transition: background 0.5s ease;
   }
-.carouselContainer{
-    position: relative;
-}
+  .navBtn:hover{
+    background-color: yellow;
+  }
+  .navBtn.customPrevButton{
+    top:32%;
+    left:-3rem;
+  }
+  .navBtn.customNextButton{
+    top:32%;
+    right:-3rem;
+  }
